Fix overflow and angles

--- a/wp-content/themes/Quantum/css/modules/header.css
+++ b/wp-content/themes/Quantum/css/modules/header.css
@@ -45,7 +45,7 @@
         height: auto;
         background: initial;
         opacity: 1;
-        transform: translate(0);
+        transform: translate(0, 1px);
       }
 
       &--active {
